--- a/index/jade/index.jade
+++ b/index/jade/index.jade
@@ -10,8 +10,7 @@ html(lang="ja")
     script(src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js")
     script(src="//coffeescript.org/extras/coffee-script.js")
     script(type="text/coffeescript").
-      window.addEventListener "load", (event) ->
-        console.log event
-        document.getElementById("wrapper").innerHTML = "hello.2"
+      window.addEventListener "load", (event) -> console.log event
+    script(src="./js/main.js")
   body
-    #wrapper
+    #wrapper= greeting
