--- a/index/jade/index.jade
+++ b/index/jade/index.jade
@@ -4,8 +4,8 @@ html(lang="ja")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title
-    //- link(rel="stylesheet", href="css/reset.css")
-    //- link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="css/reset.css")
+    link(rel="stylesheet", href="css/main.css")
     script(src="//code.jquery.com/jquery-2.2.0.min.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js")
     script(src="//coffeescript.org/extras/coffee-script.js")
