--- a/index/jade/index.jade
+++ b/index/jade/index.jade
@@ -3,7 +3,7 @@ html(lang="ja")
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    title
+    title= title
     link(rel="stylesheet", href="css/reset.css")
     link(rel="stylesheet", href="css/main.css")
     script(src="//code.jquery.com/jquery-2.2.0.min.js")
@@ -14,6 +14,4 @@ html(lang="ja")
     script(src="./js/main.js")
   body
     #wrapper= greeting
-    h1 abcd
-    h2 efgh
-    p ijkl
+    h1 Various Projects
