--- a/index/jade/_template.jade
+++ b/index/jade/_template.jade
@@ -4,7 +4,7 @@ html(lang="ja")
     meta(charset="UTF-8")
     title= title
     link(rel="stylesheet", href="../css/reset.css")
-    link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="../css/main.css")
     script(src="../js/lib/dat.gui.min.js")
     script(src="../js/lib/three.min.js")
     script(src="../js/lib/controls/TrackballControls.js")
