--- a/index.coffee/css/reset.css
+++ b/index.coffee/css/reset.css
@@ -123,9 +123,9 @@ audio:not([controls]),
 body {
   background: #fff;
   color: #000;
-  font-family: "Noto Sans CJK JP", sans-serif;
-  line-height: 1.5;
+  font-family: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, sans-serif;
   -webkit-text-size-adjust: none;
+  line-height: 1.1;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 }
