--- a/index.coffee/stylus/reset.styl
+++ b/index.coffee/stylus/reset.styl
@@ -7,9 +7,9 @@ reset-html5()
 body
 	background #fff
 	color #000
-	font-family "Noto Sans CJK JP", sans-serif  // IEはカンマ区切りのみ対応
-	line-height 1.5
-	-webkit-text-size-adjust none
+	font-family 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, sans-serif  // IEはカンマ区切りのみ対応
+	-webkit-text-size-adjust: none;
+	line-height 1.1
 	// font-smoothing antialiased  // デフォルトは、subpixel-antialiased
 	-moz-osx-font-smoothing grayscale
 	text-rendering optimizeLegibility
