--- a/index/stylus/reset.styl
+++ b/index/stylus/reset.styl
@@ -13,6 +13,8 @@ body
 	// font-smoothing antialiased  // デフォルトは、subpixel-antialiased
 	-moz-osx-font-smoothing grayscale
 	text-rendering optimizeLegibility
+  min-width 100vw
+  min-height 100vh
 
 em
 	font-weight bold
